--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "lib",
     "declaration": true,
     "target": "es6",
+    "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true
