--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grpc": "^1.17.0"
   },
   "devDependencies": {
+    "@types/node": "^10.12.18",
     "ava": "^1.0.1",
     "grpc": "^1.17.0",
     "tsc-watch": "^1.0.31",
